AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS="-Iconfig libltdl/m4"

SUBDIRS = util context formats graph metrics monitoring planner cortex bootserver agent

#lib_LTLIBRARIES = libcyton.la

#libcyton_la_SOURCES = 
# Dummy C++ source to cause C++ linking.
#nodist_EXTRA_libcyton_la_SOURCES = dummy.cxx

#libcyton_la_LIBADD = util/libutil.la context/libcontext.la bootserver/libbootserver.la formats/libformats.la graph/libgraph.la monitoring/libmonitoring.la planner/libplanner.la agent/libnodeagent.la 
