include_HEADERS =
noinst_HEADERS = 

SUBDIRS =  

#lib_LTLIBRARIES = libformats.la
noinst_LTLIBRARIES = libformats.la

#noinst_PROGRAMS = formats
#noinst_bindir = .

AM_CXXFLAGS = -g
libformats_la_SOURCES = formatmanager.cpp 

#libbootstrap_la_LIBADD = bootstrap/libbootstrap.la functions/libfunctions.la node/libnode.la
