include_HEADERS =
noinst_HEADERS = 

SUBDIRS =  

#AM_CFLAGS = -g -std=gnu99
#lib_LTLIBRARIES = libfunctions.la
noinst_LTLIBRARIES = libfunctions.la

AM_CFLAGS = -g 
libfunctions_la_SOURCES = functionmanager.c 
libfunctions_la_LDFLAGS = -module -export-dynamic -rpath /dev/null

#libfunctions_la_LIBADD = bootstrap/libbootstrap.la functions/libfunctions.la node/libnode.la
